# VirlySentry_SourceCodeScanner

./: CHANGELOG.md  README.md  custom-rules.yaml
virlysentry/: LICENSE  __init__.py  __main__.py  cli.py  pyproject.toml  requirements.txt
virlysentry/config/: default_rules.yaml  loader.py
virlysentry/core/: engine.py  scanner.py
virlysentry/reporters/: console_reporter.py  html_reporter.py
virlysentry/rules/: dead_code.py
virlysentry/virlysentry/core/: file_walker.py  models.py
virlysentry/virlysentry/reporters/: json_reporter.py
virlysentry/virlysentry/utils/: logger.py
